--- a/Test Tex File - Copy/formatting-instruction.tex
+++ b/Test Tex File - Copy/formatting-instruction.tex
@@ -23,7 +23,7 @@
 \begin{abstract}
 \begin{quote}
 People have been trading stocks on the stock market since the early 1800's. Stock trading is a complicated, but potentially very profitable way of making money. Another way to find great
-profit, or loss, is by trading cryptocurrencies. Cryptocurrencies, much like stocks, vary in their price each and every second, and people buy and sell these coins hoping to make a profit. There are many styles of trading, including scalping, day trading, intraday trading, etc. While many have been successful using these traditional trading techniques, this paper looks to explore reinforcement learning and deep reinforcement learning to optimize a cryptocurrency trading strategy that can outperform a human trader.
+profit, or loss, is by trading cryptocurrencies. It, much like stocks, vary in their price each and every second, and people buy and sell these coins hoping to make a profit. There are many styles of trading, including scalping, day trading, intraday trading, etc. While many have been successful using these traditional trading techniques, this paper looks to explore reinforcement learning and deep reinforcement learning to optimize a cryptocurrency trading strategy that can outperform a human trader.
 \end{quote}
 \end{abstract}
 
@@ -40,7 +40,13 @@ Other papers have tried to use different reinforcement learning algorithms to tr
 Reinforcement learning is.... (short history, definition, common uses etc.)
 ... Cryptocurrencies have a large amount if indicators and values that can depict a state, so the state space can become very large, and we would need a huge amount of data to train an agent. Because of this, we would like to try and implement a Monte Carlo learning algorithm and measure the effectiveness, or lack thereof. We then will compare it to an algorithm that uses a neural network to accomplish it's training, a much better suited technique for tackling such a huge problem.
 \subsection{2.1}
-Q learning is...(cite papers to define monte carlo, its pros, cons, etc.)...
+It is an off-policy TD control algorithm. For this policy, it is the agent's goal to obtain the ideal state-action function defined by
+
+Q(S_{t}, A_{t}) \leftarrow Q(S_{t}, A_{t}) + \alpha[R_{t+1} + \gamma maxQ(S_{t+1, a} - Q(S_{t}, A_{t})
+	
+
+in which the learning rate is defined as \alpha. The immediate reward plus the discount factor is defined as, [R_{t+1} + \gamma maxQ(S_{t+1, a}. The actual Q-value is defined as Q(S_{t}, A_{t}).
+In the approach, each action is mapped to a table defined as a Q-table. This table initially holds a set of null or zero values. As the agent takes actions the state-action pair value is updated by the function defined above. For correctness, the values will be updated every time state-action pairs are visited. 
 
 \subsection{2.2} 
 Deep Q learning is....(definition, the fact that it uses neural networks, etc.)
@@ -53,7 +59,7 @@ We will begin by training the agent on historical cryptocurrency trading data fr
 \subsection{4.1 Data}
 To get a range of data, we will be using an API from the exchange known as Binance. This API will allow us to download any range of data from any coin on its market. It is a useful tool that we could implement into the training network, allowing the training program to dynamically download more data to learn from based on different parameters.
 \subsection{4.2 Training}
-We will be training the agents using the basics behind many Reinforcement Learning training algorithms. We first define the state space. A state at any given time step will include a number of cryptocurrency trading indicators. The amount of indicators will depend on the efficiency of each trading algorithm because the larger amount of indicators will provide us with a bigger Q-Table, requiring more processing power. In general, we will use the as many of the most commonly used indicators in trading that the algorithm can effecitively handle. The action space is defined very simply, with only three actions: buy, sell, and hold. The agent will be rewarded positively for the amount of profit at the end of each day. The more profit, the more reward. The agent will be rewarded negatively for each loss. Again, the great the loss, the greater the punishment.
+We will be training the agents using the basics behind many Reinforcement Learning training algorithms. We first define the state space. A state at any given time step will include a number of cryptocurrency trading indicators. The amount of indicators will depend on the efficiency of each trading algorithm because the larger amount of indicators will provide us with a bigger Q-Table, requiring more processing power. In general, we will use the as many of the most commonly used indicators in trading that the algorithm can effectively handle. The action space is defined very simply, with only three actions: buy, sell, and hold. The agent will be rewarded positively for the amount of profit at the end of each day. The more profit, the more reward. The agent will be rewarded negatively for each loss. Again, the great the loss, the greater the punishment.
 
 \section{5 Evaluation}
 The two agents will be evaluated with two values, profit and the Sharpe ratio. The Sharpe ratio is defined:
@@ -69,8 +75,18 @@ where
 The Sharpe ratio tells the expected profit when accounting for loss. A portfolio can earn 100\% profit one month and seem like its an incredibly profitable strategy. However, if it loses 100\% for the next six months, then that means the trading strategy, or in our case the agents policy, is not efficiently profitable, it just happened to get lucky during the first month. Profit is important, but only if the risk is also calculated. We will evaluate the Sharpe ratio that each agent is capable of earning to ensure that the agent profits without risking too much of its assets.
 	
 \section{6 Timeline}
+\begin{center}
+\begin{tabular}{ |c|c| } 
+ \hline
+ Develop Trading Space & Space in which the agent will be able to buy, sell, or hold trades. \\ 
+ Q-Learning and Deep Q-Learning & Develop both algorithms in which the agent will act upon.\\ 
+ Training & Train the agent on 1 year of crypto data and multiple coins. \\ 
+ \hline
+\end{tabular}
+\end{center}
 
 \section{7 Conclusion}
+In 2001, Jae Won Lee, used a reinforcement learning approach to stock price prediction. *Add something about the paper still being valid due to age*. A Makarov approach was used, which in this case determines the optimal policy to be a prediction due to the circumstance that every trader may make the claim to have an optimal strategy different from one another. Given this policy, the agent will make an action that will result in the highest cumulative reward. This follows the traditional approach to a Makarov process in which there is a state and reward, both, likely unknown to the agent. In this case, the state is represented by a vector allocating the common values available to a trader on any given day. The reward is yielded using a combination of the immediate reward and closing price of the stock in each state space. Additionally, due to the continuously changing state space of a stock, a generalizing method is required since it is likely the state has never been experienced by the agent before. Using a nonlinear gradient based approximation, the agent can hand the ever-changing state space.
 
 \section{References}
 \smallskip \noindent \textit{B. Huang, Y. Huan}\\
