Fixed the formatting of the timeline

--- a/Test Tex File - Copy/formatting-instruction.tex
+++ b/Test Tex File - Copy/formatting-instruction.tex
@@ -76,11 +76,19 @@ The Sharpe ratio tells the expected profit when accounting for loss. A portfolio
 	
 \section{6 Timeline}
 \begin{center}
-\begin{tabular}{ |c|c| } 
+\begin{tabular}{||c|c|||} 
  \hline
- Develop Trading Space & Space in which the agent will be able to buy, sell, or hold trades. \\ 
- Q-Learning and Deep Q-Learning & Develop both algorithms in which the agent will act upon.\\ 
- Training & Train the agent on 1 year of crypto data and multiple coins. \\ 
+ Date & Task \\ [0.5ex] 
+ \hline\hline
+ 09/29/2021 & Data Collected and Organized \\ 
+ \hline
+ 10/06/2021 & Envrionment Created \\
+ \hline
+ 10/13/2021 & Q-Learning Training Completed \\
+ \hline
+ 10/16/2021 & Results Evaluated \\
+ \hline
+ 10/18/2021 & Midterm Presentations \\ [1ex] 
  \hline
 \end{tabular}
 \end{center}
